--- a/apps/forum_core/templates/legal/terms.html
+++ b/apps/forum_core/templates/legal/terms.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "basic.html" %}
 {% load static %}
 {% block head-meta %}
   	<meta charset="utf-8">
@@ -17,14 +17,14 @@
 <div class="container">
   <h2>Terms of Use.</h2>
     <p>By using our products, you agree to our Terms of Service.</p>
-  <p>Ronyman is owned and operated sites as stated by © ronyman.com,(“ronyman.com”, “we” or “us”),welcomes to you and to everyone</p>
+  <p>WebPres is owned and operated sites as stated by © ronyman.com,(“ronyman.com”, “we” or “us”),welcomes to you and to everyone</p>
   <strong>Services</strong>
   <ul>
   <li><p>Web development.</p></li>
   <li><p>Opnensources. </p></li>
   <li><p>Tax Agent </p></li>
 </ul>
-    <p> To learn more about <a href="/privacy" class="text-reset">Privacy Policy.</a></p>
+    <p> To learn more about <a href="/privacy/" class="text-reset">Privacy Policy.</a></p>
 
 
 {% include "legal/copyrights.html" %}
