--- a/apps/forum_core/templates/register.html
+++ b/apps/forum_core/templates/register.html
@@ -1,7 +1,7 @@
-{% extends 'layouts/basic.html' %}
+{% extends 'basic.html' %}
 
-{% block title %} Log In {% endblock %}
-{% block loginactive %} active {% endblock loginactive %}
+{% block title %} Register {% endblock %}
+{% block registeractive %} active {% endblock registeractive %}
 {% block css %}
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 *:focus {
@@ -23,7 +23,7 @@ body {
   margin: 5% auto;
   width: 700px;
   height: 500px;
-  background: #FFF;
+  background-image: linear-gradient(145deg,#0d1a26,gray, #0d1a26);
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 }
@@ -46,6 +46,7 @@ h1 {
 }
 
 input[type="text"],
+input[type="email"],
 input[type="password"] {
   display: block;
   box-sizing: border-box;
@@ -62,6 +63,7 @@ input[type="password"] {
 }
 
 input[type="text"]:focus,
+input[type="email"]:focus,
 input[type="password"]:focus {
   border-bottom: 2px solid #16a085;
   color: #16a085;
@@ -100,6 +102,9 @@ input[type="submit"]:active {
 {% endblock %}
 {% block body %} 
 <br>
+
+<body>
+
 {% for message in messages  %}            
 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
       <strong>Message : </strong> {{ message }}
@@ -107,4 +112,27 @@ input[type="submit"]:active {
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-{% endfor %}   
+{% endfor %}  
+<div id="login-box">
+    <div class="items">
+      <h1>Register</h1>
+        <form action="/register/" method="post"> {% csrf_token %}
+   
+      <input type="text" name="username" placeholder="Username" />
+      <input type="email" name="email" placeholder="E-mail" />
+      <input type="text" name="first_name" placeholder="First Name" />
+      <input type="text" name="last_name" placeholder="Last Name" />
+      <input type="password" name="password" placeholder="Password" />
+      <input type="password" name="confirm_password" placeholder="Confirm your password" />
+      
+      <input type="submit" name="signup_submit" value="Register" />
+    </div>   
+  </div>
+ </body>
+
+
+{% include "includes/footer/sponsored_by.html" %}
+{% include "includes/footer/people_by.html" %}
+{% include "layouts/quick_links.html" %}
+{% include "legal/copyrights.html" %}
+{% endblock %}
