--- a/apps/forum_core/templates/profile.html
+++ b/apps/forum_core/templates/profile.html
@@ -1,15 +1,12 @@
-{% extends "layouts/base.html" %}
-{% block head-meta %}
-  	<meta charset="utf-8">
-  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
-    <meta name="keywords" content="WebPres Forums , Profile.">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% endblock %}
+{% extends 'basic.html' %}
+
 {% block title %} Profile {% endblock %}
 {% block profileactive %} active {% endblock profileactive %}
 
-{% block content %}
+{% block css %}
+{% endblock %}
+{% block body %}
+<br>
 {% for message in messages %}
 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
     <strong>Message : </strong> {{ message }}
@@ -37,8 +34,7 @@
                                     Email: <strong class="float-right">{{request.user.email}}</strong>
                                 </li>
                                 <li class="list-group-item">
-                                    <form action="/myprofile/" enctype="multipart/form-data" method="POST">
-                                        {% csrf_token %}
+                                    <form action="/myprofile/" enctype="multipart/form-data" method="POST">{% csrf_token %} 
                                         {{ form.as_p }}
                                         <button type="submit">Upload</button>
                                         Profile Photo: <strong class="float-right"> <img
