--- a/apps/forum_core/templates/register.html
+++ b/apps/forum_core/templates/register.html
@@ -1,138 +1,48 @@
-{% extends 'basic.html' %}
+{% extends "basic.html" %}
+<!DOCTYPE html>
+{% load i18n %}
+{% load static %}
+{% load bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+<html lang="en">
+{% block head-meta %}
+  	<meta charset="utf-8">
+  	<!--Add keywords that describe your project between the quotation marks. This helps search engines find and index your content-->
+    <meta name="keywords" content="Register Accounts , WebPres.org.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	{% block bootstrap5_title %} Register  | Forums WebPres{% endblock %}
 
-{% block title %} Register {% endblock %}
-{% block registeractive %} active {% endblock registeractive %}
-{% block css %}
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
-*:focus {
-  outline: none;
-}
+    {% endblock %}
+{% block content %}
 
-body {
-  margin: 0;
-  padding: 0;
-  background: #DDD;
-  font-size: 16px;
-  color: #222;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-}
-
-#login-box {
-  position: relative;
-  margin: 5% auto;
-  width: 700px;
-  height: 500px;
-  background-image: linear-gradient(145deg,#0d1a26,gray, #0d1a26);
-  border-radius: 2px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-}
-
-.items {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  padding: 40px;
-  width: 700px;
-  height: 500px;
-}
-
-h1 {
-  margin: 0 0 20px 0;
-  font-weight: bold;
-  font-size: 28px;
-  text-align: center;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  display: block;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  padding: 4px;
-  width: 600px;
-  height: 32px;
-  border: none;
-  border-bottom: 1px solid #AAA;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  transition: 0.2s ease;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
-  border-bottom: 2px solid #16a085;
-  color: #16a085;
-  transition: 0.2s ease;
-}
-
-input[type="submit"] {
-  margin-top: 28px;
-  width: 120px;
-  height: 32px;
-  background: #16a085;
-  border: none;
-  border-radius: 2px;
-  color: #FFF;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition: 0.1s ease;
-  cursor: pointer;
-  position: relative;
-  left: 250px;
-}
-
-input[type="submit"]:hover,
-input[type="submit"]:focus {
-  opacity: 0.8;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  transition: 0.1s ease;
-}
-
-input[type="submit"]:active {
-  opacity: 1;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-  transition: 0.1s ease;
-}
-{% endblock %}
-{% block body %} 
-<br>
-
-<body>
-
-{% for message in messages  %}            
-<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-      <strong>Message : </strong> {{ message }}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+<div class="p-3 mb-2 bg-dark text-white " style=" width: 400px;
+  margin: auto;">
+    <div class="text text-center" style="
+  margin: auto;">
+         <img src="{% static 'Assets/brand/webpres-logo.png'%} " alt="" width="80" height="80">
     </div>
-{% endfor %}  
-<div id="login-box">
-    <div class="items">
-      <h1>Register</h1>
-        <form action="/register/" method="post"> {% csrf_token %}
-   
-      <input type="text" name="username" placeholder="Username" />
-      <input type="email" name="email" placeholder="E-mail" />
-      <input type="text" name="first_name" placeholder="First Name" />
-      <input type="text" name="last_name" placeholder="Last Name" />
-      <input type="password" name="password" placeholder="Password" />
-      <input type="password" name="confirm_password" placeholder="Confirm your password" />
-      
-      <input type="submit" name="signup_submit" value="Register" />
-    </div>   
-  </div>
- </body>
+  <div class="card-body">
+<h3>Register</h3>
 
+<!--Register-->
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
 
-{% include "includes/footer/sponsored_by.html" %}
-{% include "includes/footer/people_by.html" %}
-{% include "layouts/quick_links.html" %}
+{# Display a form #}
+<form action="/register/" method="post" class="form">
+  {% csrf_token %}
+  {% bootstrap_form form %}
+  {% buttons %}
+    <button type="submit" class="btn btn-dark">
+      Submit
+    </button>
+  {% endbuttons %}
+</form>
+	<p class="text-center">If you already have an account, <a href="/login/">login</a> instead.</p>
+</div>
+</div>
+</div>
 {% include "legal/copyrights.html" %}
 {% endblock %}
