Update requirement text

--- a/apps/forum_core/templates/basic.html
+++ b/apps/forum_core/templates/basic.html
@@ -38,7 +38,7 @@
         <meta name="twitter:creator" content="@webpres">
         <meta name="twitter:title" content="Introduction">
         <meta name="twitter:description" content="Get started with webpres.">
-        <meta name="twitter:image" content="https://www.ronyman.com/static/brand/ronyman-logo.png">
+        <meta name="twitter:image" content="https://www.ronyman.com/static/brand/webpres-logo.png">
 
         <!-- Facebook -->
         <meta property="og:url" content="https://www.facebook.com/ronymancom">
@@ -63,9 +63,12 @@
 <header>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"><!--main navbar-->
   <div class="container-fluid">
+      <!---
     <a class="navbar-brand" href="/">
       <img src="{% static 'brand/webpres-logo.png'%} " alt="" width="50" height="50" class="d-inline-block align-text-top">
     </a>
+    ---->
+      <h5 class="text-muted">WebPres Forums</h5>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
