--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Register Accounts , WebPres.org.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	{% block bootstrap5_title %} Register | WebPres.org{% endblock %}
+	{% block bootstrap5_title %} Register  | Forums WebPres{% endblock %}
 
     {% endblock %}
 {% block content %}
