--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -8,6 +8,6 @@
 
 
 
-<p class="text-center">Back to <a href="/login/">login</a> instead.</p>
+<p class="text-center">Back to <a href="{% url 'login' %}">login</a> instead.</p>
 
 {% endblock %}
