--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -40,7 +40,7 @@
     </button>
   {% endbuttons %}
 </form>
-	<p class="text-center">If you already have an account, <a href="/login/">login</a> instead.</p>
+	<p class="text-center">If you already have an account, <a href="{% url 'login' %}">login</a> instead.</p>
 </div>
 </div>
 </div>
