--- a/templates/registration/password_reset.html
+++ b/templates/registration/password_reset.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Create A New Account</a><br><br>
+                                <a href="{% url 'register' %}">Create A New Account</a><br><br>
                                 <a href="{% url 'login' %}">Back To Login</a><br>
                             </div>
                         </div>
