Update bootrap css

--- a/apps/forum_core/templates/layouts/base.html
+++ b/apps/forum_core/templates/layouts/base.html
@@ -51,22 +51,14 @@
           <li class="nav-item">
         <a class="nav-link text-white" href="/">Home</a>
           <li class="nav-item">
-        <a class="nav-link text-white" href="http://forum.webpres.org/">Forums</a>
+        <a class="nav-link text-white" href="http://www.webpres.org/">WebPres Site</a>
       </li>
       </li>
           <li class="nav-item">
-        <a class="nav-link text-white" href="/post/">Blog</a>
+        <a class="nav-link text-white" href="https://docs.webpres.org/">Docs</a>
       </li>
              </li>
-            <li class="nav-item dropdown">
-                  <a class="nav-link text-white dropdown-toggle " href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Versions
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item text-white" href="{% url 'v1' %}">V.1.0</a></li>
-                    <li><a class="dropdown-item text-white" href="{% url 'v1_1' %}">V.1.1</a></li>
-                  </ul>
-                </li>
+
       </li>
           <li class="nav-item">
         <a class="nav-link text-white" href="https://github.com/ronyman-com/WebPres/releases/tag/WebPres"><i class="fab fa-github"></i>&nbsp;Fork</a>
@@ -113,6 +105,12 @@
 
 {% endblock %}
 
+<style>
+    body {
+  background-image: linear-gradient(145deg,#0d1a26,gray, #0d1a26);
+
+}
+</style>
 <!--start Body-->
 <body>
 </br>
