--- a/apps/forum_core/templates/basic.html
+++ b/apps/forum_core/templates/basic.html
@@ -117,7 +117,12 @@
   </header>
 {% endblock %}
 <br>
+<style>
+    body {
+  background-image: linear-gradient(145deg,#0d1a26,gray, #0d1a26);
 
+}
+</style>
 <body>
 
 {% block body %} {% endblock %}
