--- a/apps/forum_core/templates/registration/login.html
+++ b/apps/forum_core/templates/registration/login.html
@@ -1,11 +1,12 @@
-{% extends "basic.html" %}
-<!DOCTYPE html>
+{% extends "layouts/base.html" %}
+
 {% load i18n %}
 {% load static %}
 {% load bootstrap5 %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 {% load crispy_forms_tags %}
+<!DOCTYPE html>
 <html lang="en">
 {% block head-meta %}
   	<meta charset="utf-8">
