--- a/apps/forum_core/templates/registration/register.html
+++ b/apps/forum_core/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% extends "basic.html" %}
+{% extends "layouts/base.html" %}
 <!DOCTYPE html>
 {% load i18n %}
 {% load static %}
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Register Accounts , WebPres.org.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	{% block bootstrap5_title %} Register  | Forums WebPres{% endblock %}
+	{% block bootstrap5_title %} Register to Forums WebPres | WebPres.org{% endblock %}
 
     {% endblock %}
 {% block content %}
